Fix the horizontal overflow in style.css file of the mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .header {
   display: flex;
   align-items: baseline;
@@ -23,7 +29,7 @@
 
 .nav {
   position: relative;
-  left: 28vh;
+  left: 35vh;
   width: 20%;
   height: 20%;
 }
